kustomize/base/forgeops-tests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgeops-tests
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
      - name: reports
        emptyDir: {}
      containers:
      - name: forgeops-tests
        image: forgeops-tests
        imagePullPolicy: Always
        command: ["bash", "-c"]
        #args: ["exec flask run --no-reload --no-debugger --host '0.0.0.0' --port '8080'"]
        args: ["exec gunicorn tester:app  -b 0.0.0.0:8080 --timeout 180 --access-logfile -"]
        resources:
          limits:
            memory: 1Gi
            cpu: 1
          requests:
            memory: 1Gi
        volumeMounts:
        - mountPath: /usr/src/app/tester/reports
          name: reports
        ports:
          - containerPort: 8080
