kustomize/base/forgeops-tests/service.yaml
apiVersion: v1
kind: Service
# Note that the service name is still openam - not am. Need to change the config....
metadata:
  name: forgeops-tests
spec:
  ports:
  - name: forgeops-tests
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: forgeops-tests
  type: ClusterIP
