kustomize/base/forgeops-tests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Add your allowed origins here...
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8888"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Expose-Headers: WWW-Authenticate";

  name: tests
spec:
  rules:
  - host: $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: forgeops-tests
          servicePort: 80
        #path: /test/?(.*)
        path: /tests(/|$)(.*)

  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    secretName: sslcert
